# Drawless-Chess

./: .gitattributes  .gitignore  AGENTS.md  NOTICE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: build-sampled-audio-pack.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts  signing.properties.example
android/app/: build.gradle.kts
android/app/schemas/com.drawlesschess.persistence.DrawlessDatabase/: 1.json  2.json
android/app/src/androidTest/kotlin/com/drawlesschess/persistence/: RoomCheckpointStoreInstrumentedTest.kt
android/app/src/androidTest/kotlin/com/drawlesschess/ui/: BoardTextureVisualInstrumentedTest.kt  CaptureHistoryUiInstrumentedTest.kt  ChessPieceVisualInstrumentedTest.kt  GameHapticsInstrumentedTest.kt  GameOptionsInstrumentedTest.kt  GamePacingInstrumentedTest.kt  HomeLandscapeInstrumentedTest.kt  LocaleConfigurationInstrumentedTest.kt  OpponentProfileInstrumentedTest.kt  StoreScreenshotHarness.kt  (+8 more)
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/drawlesschess/: DrawlessApplication.kt  MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-b+es+419/: strings.xml
android/app/src/main/res/values-de/: strings.xml
android/app/src/main/res/values-fr/: strings.xml
android/app/src/main/res/values-pt-rBR/: strings.xml
android/core/: build.gradle.kts  consumer-rules.pro
android/engine/: build.gradle.kts  consumer-rules.pro
android/engine/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  native_exports.map  native_identity.cpp
android/gradle/wrapper/: gradle-wrapper.jar.sha256
artwork/opponents/: README.md
contracts/: rules-contract-v1.schema.json  saved-game-v1.schema.json
docs/: ADR-001-ENGINE.md  ADR-002-RULES-AND-SAVES.md  ADR-003-ANDROID-ENGINE-RUNTIME.md  ANDROID_FOUNDATION.md  ANDROID_MACHINE_VERIFICATION.md  ARCHITECTURE.md  AUDIO_PROVENANCE.md  BOARD_PRESENTATION.md  CHESS_CORE.md  COMPOSE_APP.md  ENGINE_POC.md  ENGINE_RUNTIME.md  FORCED_REPETITION_PATCH.md  GAME_COORDINATOR.md  GO_LIVE_STATUS.md  HEADLESS_SELFPLAY.md  INTERNATIONAL_ROLLOUT_PLAN.md  NATIVE_ENGINE.md  NEXT_RELEASE_GATES.md  PLAY_RELEASE_GUIDE.md  RELEASE_LICENSING.md
docs/audio/: README.md  SAMPLED_AUDIO_INTEGRATION.md  THIRD_PARTY_AUDIO.md  audio_manifest.json
docs/audio/legacy/: README.md  REJECTED_IMPORT_SHA256SUMS.txt
docs/audio/licenses/: ion-sound-MIT.txt
docs/audio/previews/: audio-pack-preview-map.txt
engine/: parity-fixtures-v1.json  variants.ini
engine/native/: README.md  SOURCE_NOTICE.txt  source-manifest.txt  upstream.properties  wasm-poc.properties
engine/native/host-test/: native_bridge_smoke.cpp
engine/native/host-test/com/drawlesschess/engine/: FairyNativeBindings.java
engine/native/upstream/: .gitignore
engine/patches/: 0001-drawless-forced-repetition-v1.patch  0002-fix-negative-elo-rounding.patch  README.md  checksums.sha256  manifest.json  series  test-variants-unpatched.ini  test-variants.ini  verify-elo-rounding.mjs  verify-engine.mjs  verify-patch.sh
play/: README.md  closed-test-kit.md  console-declarations.md  data-safety.md  listing-de-DE.md  listing-en-US.md  listing-es-419.md  listing-fr-FR.md  listing-pt-BR.md  release-notes-0.2.0.md
play/store-assets/: PROVENANCE.md  UPLOAD-NOTES.md  asset-manifest.csv  build-store-assets.ps1
release/reports/: release-runtime-dependencies.txt  release-sbom.cdx.json
scripts/: android-machine-verify.ps1  android-machine-verify.sh  android-validate-structure.sh  check-compose-structure.sh  engine-poc.js  fairy-uci.cjs  generate-release-sbom.ps1  headless-build-engine.sh  headless-build-runner.sh  headless-puzzles.ps1  headless-puzzles.sh  headless-selfplay-soak.ps1  headless-selfplay-validate.sh  headless-selfplay.ps1  headless-selfplay.sh  license-validate-structure.sh  localization-allowlist.json  native-fetch-fairy.ps1  native-fetch-fairy.sh  native-source-bundle.sh  native-validate-structure.sh  native-verify-aar.sh  native-verify-apk.sh  native-verify-jni-host.sh  render-audio-previews.ps1  source-bundle.sh  test-kotlin.sh  test-rules.sh  validate-localization.mjs  verify-play-aab.ps1  verify-sampled-audio.ps1
scripts/audio/: build_sampled_audio_pack.py  rebuild_curated_foley.sh  rebuild_curated_previews.sh  rebuild_lossless_audio.ps1  update_curated_audio_manifest.ps1  verify_sampled_audio_pack.py
scripts/audio-preview/: AudioPreviewMain.kt
scripts/stubs/android/content/: Context.kt
scripts/stubs/android/content/res/: AssetManager.kt
scripts/stubs/android/os/: SystemClock.kt
scripts/stubs/android/util/: Log.kt
scripts/stubs/com/drawlesschess/: BuildConfig.kt  R.kt
scripts/stubs/com/drawlesschess/engine/: BuildConfig.kt
src/main/java/com/drawlesschess/rules/: DeadPositionPolicy.java  DrawlessAdjudicator.java  EndReason.java  FiftyMovePolicy.java  GameOutcome.java  PositionAfterMove.java  Ruleset.java  Side.java  StalematePolicy.java
src/main/js/: contracts.js  rules.js
src/test/java/com/drawlesschess/rules/: RulesTestRunner.java
src/test/js/: contracts.test.js  engine-parity-fixtures.test.js  rules.test.js
tools/selfplay/config/: adjacent-canary.properties  adjacent-diagnostic.properties  diagnostic.properties  same-level-canary.properties  same-level-diagnostic.properties  smoke.properties
tools/selfplay/fixtures/: adjacent-matchups.tsv  ladder-levels.tsv  openings.tsv  rule-fixtures.tsv
website/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
website/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  site-chrome.tsx
website/app/open-source/: page.tsx
website/app/privacy/: page.tsx
website/app/support/: page.tsx
website/public/: robots.txt  site.webmanifest  sitemap.xml
website/scripts/: prepare-openbsd-release.mjs  verify-openbsd-release.mjs
website/tests/: rendered-html.test.mjs
(+76 files in other folders)
